Made ValueNodes and Test work

--- a/force-app/main/default/classes/MetadataSchema_Test.cls
+++ b/force-app/main/default/classes/MetadataSchema_Test.cls
@@ -7,31 +7,31 @@ private class MetadataSchema_Test {
 
 
     @IsTest
-    private static void topLevelOptions() {
+    private static void topLevelNodes() {
 
         // Setup & Exercise
         List<MetadataSchema.Option> results = new MetadataSchema().options();
 
 
         // Verify
-        System.assert(results.contains(option('AIApplication')));
-        System.assert(results.contains(option('Profile')));
-        System.assert(results.contains(option('SecuritySettings')));
+        System.assert(results.contains(node('AIApplication')));
+        System.assert(results.contains(node('Profile')));
+        System.assert(results.contains(node('SecuritySettings')));
         
-        System.assert(!results.contains(option('AIApplicationStatus')));
-        System.assert(!results.contains(option('ProfileApplicationVisibility')));
+        System.assert(!results.contains(node('AIApplicationStatus')));
+        System.assert(!results.contains(node('ProfileApplicationVisibility')));
     }
 
 
     @IsTest
-    private static void childOptions() {
+    private static void childNodes() {
 
         // Setup
-        MetadataSchema.Option customObject = option('CustomObject');
-        MetadataSchema.Option fields = option('fields', 'CustomField');
-        MetadataSchema.Option filter = option('lookupFilter', 'LookupFilter');
-        MetadataSchema.Option item = option('filterItems', 'FilterItem');
-        MetadataSchema.Option value = option('value', 'string');
+        MetadataSchema.Option customObject = node('CustomObject');
+        MetadataSchema.Option fields = node('fields', 'CustomField');
+        MetadataSchema.Option filter = node('lookupFilter', 'LookupFilter');
+        MetadataSchema.Option item = node('filterItems', 'FilterItem');
+        MetadataSchema.Option value = node('value', 'string');
 
         MetadataSchema schema = new MetadataSchema();
 
@@ -41,19 +41,49 @@ private class MetadataSchema_Test {
         System.assert(schema.options(fields).contains(filter));
         System.assert(schema.options(filter).contains(item));
         System.assert(schema.options(item).contains(value));
+        System.assert(schema.options(value).isEmpty());
+    }
+
+
+    @IsTest
+    private static void values() {
+
+        // Setup
+        MetadataSchema.Option flowTypes = node('FlowProcessType');
+        MetadataSchema.Option autoLaunched = value('FlowProcessType', 'string', 'AutoLaunchedFlow');
+        MetadataSchema.Option invocableProcess = value('FlowProcessType', 'string', 'InvocableProcess');
+        MetadataSchema.Option workflow = value('FlowProcessType', 'string', 'Workflow');
+
+        MetadataSchema schema = new MetadataSchema();
+
+
+        // Exercise & Verify
+        System.assert(schema.options(flowTypes).contains(autoLaunched), flowTypes);
+        System.assert(schema.options(flowTypes).contains(invocableProcess), flowTypes);
+        System.assert(schema.options(flowTypes).contains(workflow), flowTypes); 
+
+        System.assert(schema.options(workflow).isEmpty());
     }
 
 
     // HELPER
 
-    private static MetadataSchema.Option option(String name){
-        return option(name, null);
-    }
-
-    private static MetadataSchema.Option option(String name, String type){
+    private static MetadataSchema.Option node(String name, String type){
         MetadataSchema.Option result = new MetadataSchema.Option();
         result.name = name;
         result.type = type;
+        return result;
+    }
+
+
+    private static MetadataSchema.Option node(String name){
+        return node(name, null);
+    }
+
+
+    private static MetadataSchema.Option value(String name, String type, String value){
+        MetadataSchema.Option result = node(name, type);
+        result.value = value;
         return result;
     }
 
